--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "framer-motion": "^12.24.12",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
+    "next": "^16.1.4",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -59,7 +60,7 @@
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
     "recharts": "^2.15.4",
-    "resend": "^6.6.0",
+    "resend": "^6.8.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
